Add link to a volunteer calendar project
* Add image of the volunteer booking app project
* Add the GitHub link
* Add the link to the deployed site

--- a/index.html
+++ b/index.html
@@ -68,9 +68,24 @@
         <header class="font-semibold">
           <h2>Below are some of the projects I worked on...</h2>
         </header>
+
+        <div class="m-5">
+          <h3 class="font-semibold">Volunteer Booking App</h3>
+          <p>I have created this full-stack, responsive volunteer booking app where I have build a calendar from scratch using React instead of using a library so that I add my own styling to the calendar with icons. Also used Tailwind CSS for styling, Node JS to build the server and postgreSQL to create the database. I have also provided two calendar options for the users to use for booking purpose.</p>
+          <a href="https://github.com/Afsha10/volunteer-calendar" target="_blank"
+            >GitHub</a
+          >
+          <a href="https://good-deeds-xnva.onrender.com/" target="_blank">
+            <img
+              src="images/volunteerBooking.png" 
+              alt="Afsha's volunteer booking app" class="w-64" 
+            />
+          </a>
+        </div>
+
         <div class="m-5">
           <h3 class="font-semibold">YouTube Video Storage App</h3>
-          <p>I've created this responsive video storage app using React to build the front end, Tailwind CSS for styling, Node JS to build the server and postgreSQL to create the database.</p>
+          <p>This is a responsive, full-stack app I have built to store YouTube videos I like, using React to build the front-end, Tailwind CSS for styling, Node JS to build the server and postgreSQL to create the database.</p>
           <a href="https://github.com/Afsha10/Full-Stack-Project-Assessment" target="_blank"
             >GitHub</a
           >
