--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>My Portfolio</title>
-  <meta name="description" content="The technical portfolio of trainee name" />
+  <meta name="description" content="The technical portfolio of Pedro Ricciardi" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
