--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
   <header>
-    <h1>My Name</h1>
+    <h1>Pedro Ricciardi</h1>
     <nav>
       <ul>
         <li><a href="#about">About Me</a></li>
