added classes in the header and nav, and more componentes created

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <script type="module" src="scripts/hideMiniContact.js"></script>
 
 <body>
-  <header>
+  <header class="main-header">
     <h1>Pedro Ricciardi</h1>
-    <nav>
+    <nav class="navbar">
       <ul>
         <li><a href="#about">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
