--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>My Portfolio</title>
+  <title>Pedro's Portfolio</title>
   <meta name="description" content="The technical portfolio of trainee name" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- suppress FOUC-->
@@ -27,6 +27,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap" rel="stylesheet" />
+
+  <link rel="shortcut icon" href="assets/images/favicon-16x16.png" type="image/png">
 </head>
 
 <script type="module" src="scripts/hideMiniContact.js"></script>
@@ -47,8 +49,8 @@
       <h2>About Me</h2>
       <article id="personal-info">
         <picture class="about__picture">
-          <source srcset="./assets/pedro.jpeg" type="image/jpeg" />
-          <img src="./assets/pedro.jpeg" alt="picture of Pedro Ricciardi" />
+          <source srcset="./assets/images/pedro.jpeg" type="image/jpeg" />
+          <img src="./assets/images/pedro.jpeg" alt="picture of Pedro Ricciardi" />
         </picture>
 
         <div id="about-text">
@@ -104,8 +106,8 @@
             </div>
           </details>
           <picture class="project__picture">
-            <source srcset="assets/oldPortfolio.png" type="image/png" />
-            <img src="assets/oldPortfolio.png" alt="Screenshot of my personal page" />
+            <source srcset="assets/images/oldPortfolio.png" type="image/png" />
+            <img src="assets/images/oldPortfolio.png" alt="Screenshot of my personal page" />
           </picture>
         </li>
         <li class="showcase__item project">
@@ -127,8 +129,8 @@
             </div>
           </details>
           <picture class="project__picture">
-            <source srcset="assets/form-control.png" type="image/png" />
-            <img src="assets/form-control.png" alt="Form control image preview" />
+            <source srcset="assets/images/form-control.png" type="image/png" />
+            <img src="assets/images/form-control.png" alt="Form control image preview" />
           </picture>
         </li>
         <li class="showcase__item project">
@@ -156,8 +158,8 @@
             </div>
           </details>
           <picture class="project__picture">
-            <source srcset="assets/karma-page.png" type="image/png" />
-            <img src="assets/karma-page.png" alt="Karma page image preview" />
+            <source srcset="assets/images/karma-page.png" type="image/png" />
+            <img src="assets/images/karma-page.png" alt="Karma page image preview" />
           </picture>
         </li>
       </ul>
