Style and update the content of mobile version
* Make the text in mobile version centred and justified
* Add the contact links with symbols
* Replace "GitHub" with "Link to GitHub"

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       rel="stylesheet"
     />
   </head>
+
   <body class="bg-cyan-100 mx-auto">
+
     <header class="flex flex-col font-bold bg-white mt-1 p-1"
       <h1>
         Welcome to Afsha's Portfolio !
@@ -52,18 +54,24 @@
         </div>
       </nav>
     </header>
+
     <main tabindex="0">
-      <section id="about" class="mx-2 ">
+
+      <section id="about" class="mx-4 ">
         <header class="font-semibold">
           <h2>About Me</h2>
         </header>
-        <ul>
-          <li>I am a software developer living in London.</li>
+
+        <ul class="text-justify">
+          <li> 
+            * A software developer living in London
+          </li>
           <li>
-            I am currently getting trained at Code Your Future, which is a 1 year full-stack software developer programme.
+            * Completed a one and half year full-stack software developer programme from Code Your Future
           </li>
         </ul>
       </section>
+
       <section id="projects" class="m-4">
         <header class="font-semibold">
           <h2>Below are some of the projects I worked on...</h2>
@@ -71,9 +79,9 @@
 
         <div class="m-5">
           <h3 class="font-semibold">Volunteer Booking App</h3>
-          <p>I have created this full-stack, responsive volunteer booking app where I have build a calendar from scratch using React instead of using a library so that I add my own styling to the calendar with icons. Also used Tailwind CSS for styling, Node JS to build the server and postgreSQL to create the database. I have also provided two calendar options for the users to use for booking purpose.</p>
+          <p class="text-justify">I have created this full-stack, responsive volunteer booking app where I have build a calendar from scratch using React instead of using a library so that I add my own styling to the calendar with icons. Also used Tailwind CSS for styling, Node JS to build the server and postgreSQL to create the database. I have also provided two calendar options for the users to use for booking purpose.</p>
           <a href="https://github.com/Afsha10/volunteer-calendar" target="_blank"
-            >GitHub</a
+            >Link to GitHub repo</a
           >
           <a href="https://good-deeds-xnva.onrender.com/" target="_blank">
             <img
@@ -85,9 +93,9 @@
 
         <div class="m-5">
           <h3 class="font-semibold">YouTube Video Storage App</h3>
-          <p>This is a responsive, full-stack app I have built to store YouTube videos I like, using React to build the front-end, Tailwind CSS for styling, Node JS to build the server and postgreSQL to create the database.</p>
+          <p class="text-justify">This is a responsive, full-stack app I have built to store YouTube videos I like, using React to build the front-end, Tailwind CSS for styling, Node JS to build the server and postgreSQL to create the database.</p>
           <a href="https://github.com/Afsha10/Full-Stack-Project-Assessment" target="_blank"
-            >GitHub</a
+            >Link to GitHub repo</a
           >
           <a href="https://afsha-youtube-video-storage.netlify.app/" target="_blank">
             <img
@@ -96,11 +104,12 @@
             />
           </a>
         </div>
+
         <div class="m-5">
           <h3 class="font-semibold">CYF Hotel React</h3>
-          <p>A hotel website created using HTML, CSS, and React.</p>
-          <a href="https://github.com/Afsha10/cyf-hotel-react" target="_blank"
-            >GitHub</a
+          <p class="text-justify">A hotel website created using HTML, CSS, and React.</p>
+          <a href="https://github.com/Afsha10/cyf-hotel-react" target="_blank" 
+            >Link to GitHub repo</a
           >
           <a href="https://afsha-hotel-react.netlify.app/" target="_blank">
             <img
@@ -109,16 +118,17 @@
             />
           </a>
         </div>
+
         <div class="m-5">
           <h3 class="font-semibold">TV Show Webpage</h3>
-          <p>
+          <p class="text-justify">
             A responsive TV show webpage created using HTML, CSS, and vanilla
             JS.
           </p>
           <a
             href="https://github.com/Afsha10/tv-show-dom-project"
             target="_blank"
-            >GitHub</a
+            >Link to GitHub repo</a
           >
           <a href="https://cyf-afsha10-tvv.netlify.app/" target="_blank">
             <img
@@ -127,13 +137,14 @@
             />
           </a>
         </div>
+
         <div class="m-5">
           <h3 class="font-semibold">HTML & CSS Coursework</h3>
-          <p>A website designed and created using HTML and CSS.</p>
+          <p class="text-justify">A website designed and created using HTML and CSS.</p>
           <a
             href="https://github.com/Afsha10/HTML-CSS-Coursework-Week3"
             target="_blank"
-            >GitHub</a
+            >Link to GitHub repo</a
           >
           <a href="https://cakes-co-project.netlify.app/" target="_blank">
             <img
@@ -142,15 +153,20 @@
             />
           </a>
         </div>
+
       </section>
+
       <section id="contact" class="font-semibold">
         <header><h2>Contact me</h2></header>
-        <p></p>
+        <p>
+
+        </p>
       </section>
+
     </main>
-    <footer>
+    <footer class="flex flex-row">
       <h3>
-        <a href="https://github.com/CodeYourFuture/Portfolio"
+        <a href="https://github.com/Afsha10"
           ><svg
             focusable="false"
             role="presentation"
@@ -166,9 +182,49 @@
               fill="currentColor"
             />
           </svg>
-          Read me</a
+          GitHub</a
         >
       </h3>
+
+      <h3>
+        <a href="https://www.linkedin.com/in/afsha-h"
+          ><svg
+            focusable="false"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"
+            width="48"
+            height="48"
+          >
+            <path
+              fill="currentColor"
+              d="M414.1 0H33.9C15.2 0 0 15.2 0 33.9v444.3C0 496.8 15.2 512 33.9 512h380.2c18.7 0 33.9-15.2 33.9-33.9V33.9C448 15.2 432.8 0 414.1 0zM135.5 416H67V193h68.5v223zM101.3 158.4c-22.5 0-40.7-18.2-40.7-40.6S78.8 77.1 101.3 77.1c22.4 0 40.6 18.2 40.6 40.7 0 22.4-18.2 40.6-40.6 40.6zm313.5 257.6H312V331c0-23.3-.4-53.3-32.4-53.3-32.5 0-37.5 25.4-37.5 51.7V416H175V193h64.7v27.5h.9c8.9-16.8 30.6-34.5 63.7-34.5 68.3 0 81.1 44.9 81.1 103.4v119.6z"
+            ></path></svg
+          >
+          LinkedIn</a
+        >
+      </h3>
+
+
+      <h3>
+        <a href="mailto:unityofbeing1@gmail.com"
+      ><svg
+        focusable="false"
+        role="img"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 512 512"
+        width="48"
+        height="48"
+      >
+        <path
+          fill="currentColor"
+          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 464c-124.4 0-224-99.6-224-224S131.6 24 256 24s224 99.6 224 224-99.6 224-224 224zm0-352L32 368h448L256 120z"
+        ></path></svg
+      >
+      Email</a
+    >
+  </h3>
+
     </footer>
   </body>
 </html>
