--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
   <body class="bg-cyan-100 mx-auto">
 
-    <header class="flex flex-col font-bold bg-white mt-1 p-1"
+    <header class="flex flex-col font-bold bg-white my-2 text-center p-1"
       <h1>
         Welcome to Afsha's Portfolio !
       </h1>
       <nav>
-        <div class="flex flex-row space-x-7">
+        <div class="flex flex-row space-x-7 justify-center m-2">
           <button class="rounded-lg bg-blue-100 px-1"><a href="#about">About Me</a></button>
           <button class="rounded-lg bg-blue-100 px-1"><a href="#projects">Projects</a></button>
           <button class="rounded-lg bg-blue-100 px-1"><a href="#contact">Contact</a></button>
@@ -157,73 +157,74 @@
       </section>
 
       <section id="contact" class="font-semibold">
-        <header><h2>Contact me</h2></header>
+        <header class="text-center">
+          <h2>Contact me</h2>
+        </header>
         <p>
 
         </p>
       </section>
 
     </main>
-    <footer class="flex flex-row">
+    <footer class="flex flex-row justify-center gap-8 my-2">
       <h3>
-        <a href="https://github.com/Afsha10"
-          ><svg
+        <a href="https://github.com/Afsha10">
+          <svg
             focusable="false"
             role="presentation"
             viewbox="0 0 98 96"
             width="48"
             height="48"
-            xmlns="http://www.w3.org/2000/svg"
-          >
+            xmlns="http://www.w3.org/2000/svg">
             <path
               fill-rule="evenodd"
               clip-rule="evenodd"
               d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
-              fill="currentColor"
-            />
+              fill="currentColor"/>
           </svg>
-          GitHub</a
-        >
+          GitHub
+        </a>
       </h3>
 
       <h3>
-        <a href="https://www.linkedin.com/in/afsha-h"
-          ><svg
+        <a href="https://www.linkedin.com/in/afsha-h">
+          <svg
             focusable="false"
             role="img"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"
             width="48"
-            height="48"
-          >
+            height="48">
             <path
               fill="currentColor"
-              d="M414.1 0H33.9C15.2 0 0 15.2 0 33.9v444.3C0 496.8 15.2 512 33.9 512h380.2c18.7 0 33.9-15.2 33.9-33.9V33.9C448 15.2 432.8 0 414.1 0zM135.5 416H67V193h68.5v223zM101.3 158.4c-22.5 0-40.7-18.2-40.7-40.6S78.8 77.1 101.3 77.1c22.4 0 40.6 18.2 40.6 40.7 0 22.4-18.2 40.6-40.6 40.6zm313.5 257.6H312V331c0-23.3-.4-53.3-32.4-53.3-32.5 0-37.5 25.4-37.5 51.7V416H175V193h64.7v27.5h.9c8.9-16.8 30.6-34.5 63.7-34.5 68.3 0 81.1 44.9 81.1 103.4v119.6z"
-            ></path></svg
-          >
-          LinkedIn</a
-        >
+              d="M414.1 0H33.9C15.2 0 0 15.2 0 33.9v444.3C0 496.8 15.2 512 33.9 512h380.2c18.7 0 33.9-15.2 33.9-33.9V33.9C448 15.2 432.8 0 414.1 0zM135.5 416H67V193h68.5v223zM101.3 158.4c-22.5 0-40.7-18.2-40.7-40.6S78.8 77.1 101.3 77.1c22.4 0 40.6 18.2 40.6 40.7 0 22.4-18.2 40.6-40.6 40.6zm313.5 257.6H312V331c0-23.3-.4-53.3-32.4-53.3-32.5 0-37.5 25.4-37.5 51.7V416H175V193h64.7v27.5h.9c8.9-16.8 30.6-34.5 63.7-34.5 68.3 0 81.1 44.9 81.1 103.4v119.6z">
+            </path>
+          </svg>
+          LinkedIn
+        </a>
       </h3>
 
 
       <h3>
         <a href="mailto:unityofbeing1@gmail.com"
-      ><svg
-        focusable="false"
-        role="img"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 512 512"
-        width="48"
-        height="48"
-      >
-        <path
-          fill="currentColor"
-          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 464c-124.4 0-224-99.6-224-224S131.6 24 256 24s224 99.6 224 224-99.6 224-224 224zm0-352L32 368h448L256 120z"
-        ></path></svg
-      >
-      Email</a
-    >
-  </h3>
+          ><svg
+            focusable="false"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            width="48"
+            height="48"
+          >
+            <path
+              fill="currentColor"
+              d="M21 4H3a2 2 0 00-2 2v12a2 2 0 002 2h18a2 2 0 002-2V6a2 2 0 00-2-2zm0 2l-9 5-9-5V6l9 5 9-5v6.47l-9 4.99-9-4.99V8l9 5 9-5v6.47l-9 5L3 14V6z"
+            ></path>
+          </svg>
+          Email</a
+        >
+      </h3>
+
+
 
     </footer>
   </body>
