--- a/index.html
+++ b/index.html
@@ -27,21 +27,9 @@
         <img src="m pic.png" alt="Fathi Kahin" class="c-section__image" />
         <h2 class="c-section__title">About Me</h2>
         <p class="c-section__text">
-          I am a biomedical scientist turned refugee case worker at a charity
-          supporting refugees and asylum seekers in their integration into
-          society. My daily tasks involve aiding clients in finding suitable
-          educational facilities and housing, as well as providing independent
-          information and guidance. My role is multi-faceted, with a focus on
-          facilitating access to welfare support and financial benefits,
-          especially for those unfamiliar with the system. In addition to my
-          work, I am passionate about technology and its potential to transform
-          lives. I discovered Code Your Future while researching services for
-          clients and found it perfectly aligned with my values. Assisting
-          refugees in rebuilding their lives has always been a personal goal,
-          and coding is my dream avenue for achieving this. I'm eager to learn
-          programming and apply my skills to make a positive impact. Committed
-          to continuous learning, I plan to leverage my experience as a refugee
-          case worker to excel in the tech sector. <br /><br />
+          I am a former biomedical scientist who transitioned into the role of a compassionate refugee case worker at a charity committed to supporting refugees and asylum seekers in their integration into society. My daily responsibilities include assisting clients in finding suitable educational facilities and housing, providing independent information and guidance, and facilitating access to welfare support and financial benefits.
+My multifaceted role is particularly focused on helping those who are unfamiliar with the system navigate the challenges they face. Beyond my work, I hold a profound passion for technology and its potential to transform lives. In my quest to broaden my skills and make a more significant impact, I discovered Code Your Future while researching services for our clients. The alignment of its values with mine was striking, and I recognised it as a perfect avenue for me to assist refugees in rebuilding their lives through coding.
+I am eager to learn programming and apply my evolving skills to create positive change. Having solidified my understanding of HTML and CSS, I consider it a milestone in my ongoing JavaScript journey. Committed to continuous learning, I plan to leverage my unique experiences as a refugee case worker to excel in the dynamic and impactful tech sector. <br /><br />
         </p>
         
     
