about.html updated

--- a/about.html
+++ b/about.html
@@ -23,33 +23,51 @@
       <section>
         <h2 class="c-section__title">About Me</h2>
         <p class="c-section__text">
-          I am a former biomedical scientist who has transitioned into a role as
-          a refugee case worker at a charitable organization dedicated to
-          supporting refugees and asylum seekers as they integrate into society.
-          In my daily responsibilities, I am deeply involved in assisting
-          clients in their quest to find suitable educational institutions and
-          housing while offering them unbiased information and guidance.
-          <br /><br />
 
-          My role encompasses a diverse range of tasks, with a primary focus on
-          facilitating access to essential welfare support and financial
-          benefits, particularly for individuals who may not be well-acquainted
-          with the intricacies of the system. Beyond my professional
-          commitments, I hold a profound passion for technology and its
-          potential to bring about transformative changes in people's lives.<br /><br />
+    <h2>Background:</h2>
+    <p>
+        With a Master's Degree in Biomedical Science and a rich background as a refugee case worker for over seven years, I bring a versatile skill set to the field of software development.
+        My experience has honed my problem-solving abilities, effective communication, and empathy, making me well-suited for coding challenges, team collaboration, and user-centered design thinking.
+    </p>
 
-          My introduction to Code Your Future occurred during my research into
-          services that could benefit our clients, and I quickly realized that
-          it resonated perfectly with my personal values and aspirations.
-          Assisting refugees in rebuilding their lives has long been a deeply
-          ingrained goal of mine, and I view coding as the ideal avenue to
-          accomplish this mission. <br /><br />
+    <h2>Tech Skills:</h2>
+    <p>
+        Currently pursuing a career in software development, I am developing my skills in HTML, CSS, SQL, JavaScript, NodeJS, React, and Jest.
+        My commitment to continuous learning allows me to embrace emerging technologies and industry trends.
+    </p>
 
-          I am driven by a strong desire to acquire programming skills and
-          employ them to create a meaningful and positive impact. My commitment
-          to perpetual learning remains unwavering, and I intend to harness my
-          background as a refugee case worker to excel in the technology sector,
-          contributing to the betterment of both individuals and communities.
+    <h2>Professional Experience:</h2>
+    <h3>Refugee Case Worker (RETAS LEEDS - Refugee Education Training Advice Service)</h3>
+    <p>Jun 2016 - Present (7 years 3 months)<br>
+        As a refugee case worker, I have supported refugees, asylum seekers, and vulnerable immigrants in rebuilding their lives.
+        My empathy and expertise have empowered them to rebuild with dignity and resilience.
+    </p>
+
+    <h3>Group Facilitator (Ingeus)</h3>
+    <p>Jun 2011 - Jul 2015 (4 years 2 months)<br>
+        In the role of a group facilitator, I led engaging workshops across West Yorkshire, delivering complex information persuasively to diverse audiences.
+    </p>
+
+    <h2>Education:</h2>
+    <p>
+        <strong>Master’s Degree, Biomedical Science, Nottingham Trent University (2015 - 2016)</strong><br>
+        <strong>Postgraduate Diploma (PGDip), Learning and Development Management, The University of Huddersfield (2012 - 2015)</strong>
+    </p>
+
+    <h2>Key Skills:</h2>
+    <ul>
+        <li>Software Development</li>
+        <li>Team Collaboration</li>
+        <li>Problem Solving</li>
+        <li>Continuous Learning</li>
+    </ul>
+
+    <h2>Objective:</h2>
+    <p>Actively seeking software development roles to contribute my expertise to innovative projects and teams.</p>
+
+    <h2>Let's Connect:</h2>
+    <p>Eager to engage with developers, tech enthusiasts, and professionals. Let's connect and explore the endless possibilities in software development!</p>
+
           <br /><br />
         </p>
       </section>
